--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ show-source = true
 statistics = false
 
 # Plugins:
+max-imports = 14
 max-arguments = 10
 min-name-length = 1
 max-expressions = 15
